change the placement

--- a/app/app.html
+++ b/app/app.html
@@ -33,14 +33,14 @@
     <script src="./assets/js/scripts/AlertEx.js"></script>
     <script src="./assets/js/scripts/uibind.js"></script>
     <script src="./assets/js/scripts/Layer.js"></script>
+    <script src="./assets/js/scripts/svg.js"></script>
     <script src="./assets/js/ui/popup-element.js"></script>
     <script src="./assets/js/ui/slider-element.js"></script>
-    <script src="./assets/js/panel.js"></script>
     <script src="./assets/js/ui/dropdown-selector.js"></script>
     <script src="./assets/js/ui/guilds.js"></script>
-    <script src="./assets/js/scripts/svg.js"></script>
+    <script src="./assets/js/panel.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
-    <script src="./assets/js/scripts/renderer.js"></script>
+    <script src="./assets/js/scripts/renderer.js" type="module"></script>
 </body>
 </html>
