started moving to modules

--- a/app/app.html
+++ b/app/app.html
@@ -28,7 +28,38 @@
         <div></div>
         <div style="position: fixed; opacity: 0; pointer-events: none;"></div>
     </div>
-    <script src="./assets/js/scripts/ElementEx.js"></script>
+        <script src="./assets/js/scripts/ElementEx.js"></script>
+        <script type="module">
+            import {FrameBar} from "./assets/js/panel.js";
+            import {getPreferredColorScheme} from "./assets/js/scripts/Tools.js";
+            if (window.__STANDALONE__ && window.system?.os) {
+                qsl(".app-mount").prepend(FrameBar());
+                qsl('.app-container').toggle(true, 'frame-fix');
+            }
+            switch (window.system?.os) {
+                case 'windows':
+                    document.documentElement.classList.add('platform-win')
+                    break;
+                case 'osx':
+                    document.documentElement.classList.add('platform-darwin')
+                    break;
+                case 'linux':
+                    document.documentElement.classList.add('platform-linux')
+                    break;
+                default:
+                    document.documentElement.classList.add('platform-web')
+                    break;
+            }
+
+            switch (window.system?.colorScheme || getPreferredColorScheme()) {
+                case 'light':
+                    document.documentElement.classList.add('light-theme')
+                    break;
+                default:
+                    document.documentElement.classList.add('dark-theme')
+                    break;
+            }
+        </script>
     <script src="./assets/js/scripts/Animation.js"></script>
     <script src="./assets/js/scripts/AlertEx.js"></script>
     <script src="./assets/js/scripts/uibind.js"></script>
@@ -38,9 +69,9 @@
     <script src="./assets/js/ui/slider-element.js"></script>
     <script src="./assets/js/ui/dropdown-selector.js"></script>
     <script src="./assets/js/ui/guilds.js"></script>
-    <script src="./assets/js/panel.js"></script>
+    <!--<script src="./assets/js/panel.js"></script>-->
     <script src="./assets/js/settings.js"></script>
-    <script src="./assets/js/versionChooser.js"></script>
+    <!--<script src="./assets/js/versionChooser.js"></script>-->
     <script src="./assets/js/scripts/renderer.js" type="module"></script>
 </body>
 </html>
