moving to modules

--- a/app/app.html
+++ b/app/app.html
@@ -29,6 +29,8 @@
         <div style="position: fixed; opacity: 0; pointer-events: none;"></div>
     </div>
         <script src="./assets/js/scripts/ElementEx.js"></script>
+        <script src="./assets/js/scripts/Animation.js"></script>
+        <!--<script src="./assets/js/scripts/Layer.js"></script>-->
         <script type="module">
             import {FrameBar} from "./assets/js/panel.js";
             import {getPreferredColorScheme} from "./assets/js/scripts/Tools.js";
@@ -60,18 +62,8 @@
                     break;
             }
         </script>
-    <script src="./assets/js/scripts/Animation.js"></script>
+    <script src="./assets/js/ui/popup-element.js" type="module"></script>
     <script src="./assets/js/scripts/AlertEx.js" type="module"></script>
-    <script src="./assets/js/scripts/uibind.js"></script>
-    <script src="./assets/js/scripts/Layer.js"></script>
-    <!--<script src="./assets/js/scripts/svg.js"></script>-->
-    <script src="./assets/js/ui/popup-element.js"></script>
-    <!--<script src="./assets/js/ui/slider-element.js"></script>-->
-    <!--<script src="./assets/js/ui/dropdown-selector.js"></script>-->
-    <!--<script src="./assets/js/ui/guilds.js"></script>-->
-    <!--<script src="./assets/js/panel.js"></script>-->
-    <!--<script src="./assets/js/settings.js"></script>-->
-    <!--<script src="./assets/js/versionChooser.js"></script>-->
     <script src="./assets/js/scripts/renderer.js" type="module"></script>
 </body>
 </html>
