--- a/app/app.html
+++ b/app/app.html
@@ -11,7 +11,7 @@
         <div class="app">
             <div class="app-container">
                 <div class="app-layers">
-                    <div class="layer base-layer" id="main-layer"></div>
+                    <!--<div class="layer base-layer" id="main-layer"></div>-->
                 </div>
                 <div class="uploadArea">
                     <div class="uploadDropModal"></div>
@@ -62,8 +62,9 @@
                     break;
             }
         </script>
-    <script src="./assets/js/ui/popup-element.js" type="module"></script>
-    <script src="./assets/js/scripts/AlertEx.js" type="module"></script>
+    <script src="./assets/js/scripts/tooltip.js" type="module"></script>
+    <!--<script src="./assets/js/ui/popup-element.js" type="module"></script>-->
+    <!--<script src="./assets/js/scripts/AlertEx.js" type="module"></script>-->
     <script src="./assets/js/scripts/renderer.js" type="module"></script>
 </body>
 </html>
