--- a/app/app.html
+++ b/app/app.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html class="preload auto-s">
+<html class="preload auto-s" style="background-color: #171614">
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
+    <script src="./assets/js/scripts/ElementEx.js"></script>
+    <script type="module">
+        import {FrameBar} from "./assets/js/panel.js";
+        import {getPreferredColorScheme} from "./assets/js/scripts/Tools.js";
+        if (window.__STANDALONE__ && window.system?.os) {
+            qsl(".app-mount").prepend(FrameBar());
+            qsl('.app-container').toggle(true, 'frame-fix');
+        }
+        switch (window.system?.os) {
+            case 'windows':
+                document.documentElement.classList.toggle('platform-win', true)
+                break;
+            case 'osx':
+                document.documentElement.classList.toggle('platform-darwin', true)
+                break;
+            case 'linux':
+                document.documentElement.classList.toggle('platform-linux', true)
+                break;
+            default:
+                document.documentElement.classList.toggle('platform-web', true)
+                break;
+        }
+        switch (window.system?.colorScheme || getPreferredColorScheme()) {
+            case 'light':
+                document.documentElement.classList.toggle('light-theme', true)
+                break;
+            default:
+                document.documentElement.classList.toggle('dark-theme', true)
+                break;
+        }
+    </script>
 </head>
 <body>
     <div id="app-mount" class="app-mount">
@@ -28,39 +59,7 @@
         <div></div>
         <div style="position: fixed; opacity: 0; pointer-events: none;"></div>
     </div>
-        <script src="./assets/js/scripts/ElementEx.js"></script>
-        <script src="./assets/js/scripts/Animation.js"></script>
-        <script type="module">
-            import {FrameBar} from "./assets/js/panel.js";
-            import {getPreferredColorScheme} from "./assets/js/scripts/Tools.js";
-            if (window.__STANDALONE__ && window.system?.os) {
-                qsl(".app-mount").prepend(FrameBar());
-                qsl('.app-container').toggle(true, 'frame-fix');
-            }
-            switch (window.system?.os) {
-                case 'windows':
-                    document.documentElement.classList.add('platform-win')
-                    break;
-                case 'osx':
-                    document.documentElement.classList.add('platform-darwin')
-                    break;
-                case 'linux':
-                    document.documentElement.classList.add('platform-linux')
-                    break;
-                default:
-                    document.documentElement.classList.add('platform-web')
-                    break;
-            }
-
-            switch (window.system?.colorScheme || getPreferredColorScheme()) {
-                case 'light':
-                    document.documentElement.classList.add('light-theme')
-                    break;
-                default:
-                    document.documentElement.classList.add('dark-theme')
-                    break;
-            }
-        </script>
+    <script src="./assets/js/scripts/Animation.js"></script>    
     <script src="./assets/js/scripts/tooltip.js" type="module"></script>
     <script src="./assets/js/scripts/renderer.js" type="module"></script>
 </body>
