--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="preload auto-s" style="background-color: #171614">
+<html class="preload" style="background-color: #171614">
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
