--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="preload dark-theme" style="background-color: #171614">
+<html class="preload dark-theme">
     <head>
         <meta charset="UTF-8">
         <title>TJMC-Launcher</title>
