--- a/app/app.html
+++ b/app/app.html
@@ -12,6 +12,6 @@
         <script src="./assets/js/index.js" type="module"></script>
         <script src="./assets/js/scripts/Animation.js"></script>
         <script src="./assets/js/scripts/tooltip.js" type="module"></script>
-        <script src="./assets/js/scripts/renderer.js" type="module"></script>
+        <!--<script src="./assets/js/scripts/renderer.js" type="module"></script>-->
     </body>
 </html>
