--- a/app/app.html
+++ b/app/app.html
@@ -2,16 +2,27 @@
 <html class="preload dark-theme">
     <head>
         <meta charset="UTF-8">
+        <meta content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" name="viewport">
+        <!-- section:seometa -->
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="TJMCRAFT">
+        <meta property="og:title" content="TJMCRAFT">
+        <meta property="og:description" content="">
+        <meta property="og:image" content="./assets/images/tjm.png">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@tjmc">
+        <meta name="twitter:creator" content="@tjmc">
+        <!-- endsection -->
+        <link rel="stylesheet" href="./assets/css/launcher.css">
+        <link rel="icon" href="./assets/images/icon.png">
+        <!-- section:title -->
         <title>TJMC-Launcher</title>
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
-        <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
+        <!-- endsection -->
+        <script charset="UTF-8" src="./assets/js/Libs/ElementEx.js"></script>
+        <script charset="UTF-8" src="./assets/js/Libs/Animation.js"></script>
+        <script charset="UTF-8" src="./assets/js/index.js" type="module"></script>
     </head>
     <body>
         <div id="app-mount"></div>
-        <script src="./assets/js/Libs/ElementEx.js"></script>
-        <script src="./assets/js/Libs/Animation.js"></script>
-        <script src="./assets/js/index.js" type="module"></script>
-        <script src="./assets/js/scripts/tooltip.js" type="module"></script>
-        <!--<script src="./assets/js/scripts/renderer.js" type="module"></script>-->
     </body>
 </html>
