--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="preload dark-theme">
+<html class="preload">
     <head>
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" name="viewport">
