update preload window

--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -28,7 +28,7 @@
             max-height: 100vh;
             margin: auto;
             background-color: #252528;
-            color: #eee;
+            color: #ddd;
             -webkit-app-region: drag;
         }
         .container {
@@ -42,8 +42,12 @@
 <body>
     <div id="app-mount">
         <div class="container">
-            <img src="https://tjmcraft.ga/nlogoc-min.png" alt=""/>
-            <div>Загрузка...</div>
+            <img src="https://tjmcraft.ga/3c3new_logo_2.png" alt="">
+            <div style="
+                font-weight: 800;
+                font-size: 1.2rem;
+                margin: 0 0 1rem 0;
+            ">Загрузка...</div>
         </div>
     </div>
 </body>
