--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -6,6 +6,13 @@
     <title>TJMC-Launcher</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' unsafe-inline">
     <style type="text/css">
+        * {
+            box-sizing: border-box;
+        }
+        :root {
+            --text-color: #ddd;
+            --background-color: #252528;
+        }
         body {
             background-color: #222;
             margin: 0;
@@ -27,410 +34,139 @@
             max-width: 100vw;
             max-height: 100vh;
             margin: auto;
-            background-color: #252528;
-            color: #ddd;
+            background-color: var(--background-color);
             -webkit-app-region: drag;
         }
         .container-c23 {
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 1rem;
+        }
+        .loading-654 {
+            font-weight: 800;
+            font-size: 1.2rem;
+            margin: .8rem 0;
+            color: var(--text-color);
+        }
+        .logo-spl {
+            background: #fff;
+            border-radius: 20%;
+            box-shadow: 5px 5px 10px 0px #666;
         }
     </style>
     <style>
-body .container {
-  width: 112px;
-  height: 112px;
+
+.dots {
+  display: inline-flex;
 }
-body .container .box1,
-body .container .box2,
-body .container .box3 {
-  border: 16px solid #f5f5f5;
-  box-sizing: border-box;
-  position: absolute;
-  display: block;
+.dots--animate .dot.z {
+  -webkit-animation: scale 0.8s 0.2s forwards;
+          animation: scale 0.8s 0.2s forwards;
 }
-body .container .box1 {
-  width: 112px;
-  height: 48px;
-  margin-top: 64px;
-  margin-left: 0px;
-  -webkit-animation: anime1 4s 0s forwards ease-in-out infinite;
-          animation: anime1 4s 0s forwards ease-in-out infinite;
+.dots--animate .dot.f, .dots--animate .dot.s {
+  -webkit-animation: right 0.5s forwards;
+          animation: right 0.5s forwards;
 }
-body .container .box2 {
-  width: 48px;
-  height: 48px;
-  margin-top: 0px;
-  margin-left: 0px;
-  -webkit-animation: anime2 4s 0s forwards ease-in-out infinite;
-          animation: anime2 4s 0s forwards ease-in-out infinite;
-}
-body .container .box3 {
-  width: 48px;
-  height: 48px;
-  margin-top: 0px;
-  margin-left: 64px;
-  -webkit-animation: anime3 4s 0s forwards ease-in-out infinite;
-          animation: anime3 4s 0s forwards ease-in-out infinite;
-}
-@-webkit-keyframes anime1 {
-  0% {
-    width: 112px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  25% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  50% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  75% {
-    width: 48px;
-    height: 112px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  100% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-}
-@keyframes anime1 {
-  0% {
-    width: 112px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  25% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  50% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-  75% {
-    width: 48px;
-    height: 112px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  100% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-}
-@-webkit-keyframes anime2 {
-  0% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  25% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  50% {
-    width: 112px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  75% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  100% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-}
-@keyframes anime2 {
-  0% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  25% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  50% {
-    width: 112px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  75% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  100% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-}
-@-webkit-keyframes anime3 {
-  0% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  25% {
-    width: 48px;
-    height: 112px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  50% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  75% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  100% {
-    width: 112px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
-}
-@keyframes anime3 {
-  0% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  12.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  25% {
-    width: 48px;
-    height: 112px;
-    margin-top: 0px;
-    margin-left: 64px;
-  }
-  37.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  50% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  62.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  75% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  87.5% {
-    width: 48px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 64px;
-  }
-  100% {
-    width: 112px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-  }
+.dots--animate .dot.l {
+  -webkit-animation: rightDown 0.4s 0.1s forwards linear, drop 2s 0.4s forwards linear;
+          animation: rightDown 0.4s 0.1s forwards linear, drop 2s 0.4s forwards linear;
 }
 
+.dot {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background: var(--text-color);
+  border-radius: 50%;
+  position: relative;
+  margin-left: 6px;
+}
+.dot.z {
+  position: absolute;
+  transform: scale(0);
+}
+@-webkit-keyframes scale {
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes scale {
+  100% {
+    transform: scale(1);
+  }
+}
+.dot.f, .dot.s {
+  transform: translateX(0px);
+}
+@-webkit-keyframes right {
+  100% {
+    transform: translateX(11px);
+  }
+}
+@keyframes right {
+  100% {
+    transform: translateX(11px);
+  }
+}
+.dot.t {
+  background: transparent;
+}
+.dot .l {
+  margin-left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+@-webkit-keyframes rightDown {
+  50% {
+    top: 4px;
+    left: 11px;
+  }
+  100% {
+    top: 12px;
+    left: 24px;
+  }
+}
+@keyframes rightDown {
+  50% {
+    top: 4px;
+    left: 11px;
+  }
+  100% {
+    top: 12px;
+    left: 24px;
+  }
+}
+@-webkit-keyframes drop {
+  100% {
+    transform: translate(70px, calc(35px + (100vh/2)));
+  }
+}
+@keyframes drop {
+  100% {
+    transform: translate(70px, calc(35px + (100vh/2)));
+  }
+}
     </style>
 </head>
 
 <body>
     <div id="app-mount">
         <div class="container-c23">
-            <!--<img src="3c3new_logo_2.png" alt="">-->
-            
-<div class="container">
-    <div class="box1"></div>
-    <div class="box2"></div>
-    <div class="box3"></div>
-  </div>
-            <div style="
-                font-weight: 800;
-                font-size: 1.2rem;
-                margin: 1rem 0;
-            ">Загрузка...</div>
+            <img src="./3c3new_logo_2.png" alt="" class="logo-spl">
+            <div class="loading-654">Загрузка<div class="dots">
+                    <span class="dot z"></span>
+                    <span class="dot f"></span>
+                    <span class="dot s"></span>
+                    <span class="dot t">
+                        <span class="dot l"></span>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
+    <script type="text/javascript" src="./index.js" defer></script>
 </body>
 
 </html>
