--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -8,6 +8,7 @@
     <style type="text/css">
         * {
             box-sizing: border-box;
+            user-select: none;
         }
         :root {
             --text-color: #ddd;
