--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -2,172 +2,37 @@
 <html class="preload dark-theme">
 
 <head>
-    <meta charset="UTF-8">
-    <title>TJMC-Launcher</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' unsafe-inline">
-    <style type="text/css">
-        * {
-            box-sizing: border-box;
-            user-select: none;
-        }
-        :root {
-            --text-color: #ddd;
-            --background-color: #252528;
-        }
-        body {
-            background-color: #222;
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        img {
-            max-width: 100%;
-            pointer-events: none;
-        }
-        #app-mount {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            min-height: 100vh;
-            min-width: 100vw;
-            max-width: 100vw;
-            max-height: 100vh;
-            margin: auto;
-            background-color: var(--background-color);
-            -webkit-app-region: drag;
-        }
-        .container-c23 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 1rem;
-        }
-        .loading-654 {
-            font-weight: 800;
-            font-size: 1.2rem;
-            margin: .8rem 0;
-            color: var(--text-color);
-        }
-        .logo-spl {
-            background: #fff;
-            border-radius: 20%;
-            box-shadow: 5px 5px 10px 0px #666;
-        }
-    </style>
-    <style>
-
-.dots {
-  display: inline-flex;
-}
-.dots--animate .dot.z {
-  -webkit-animation: scale 0.8s 0.2s forwards;
-          animation: scale 0.8s 0.2s forwards;
-}
-.dots--animate .dot.f, .dots--animate .dot.s {
-  -webkit-animation: right 0.5s forwards;
-          animation: right 0.5s forwards;
-}
-.dots--animate .dot.l {
-  -webkit-animation: rightDown 0.4s 0.1s forwards linear, drop 2s 0.4s forwards linear;
-          animation: rightDown 0.4s 0.1s forwards linear, drop 2s 0.4s forwards linear;
-}
-
-.dot {
-  display: inline-block;
-  width: 5px;
-  height: 5px;
-  background: var(--text-color);
-  border-radius: 50%;
-  position: relative;
-  margin-left: 6px;
-}
-.dot.z {
-  position: absolute;
-  transform: scale(0);
-}
-@-webkit-keyframes scale {
-  100% {
-    transform: scale(1);
-  }
-}
-@keyframes scale {
-  100% {
-    transform: scale(1);
-  }
-}
-.dot.f, .dot.s {
-  transform: translateX(0px);
-}
-@-webkit-keyframes right {
-  100% {
-    transform: translateX(11px);
-  }
-}
-@keyframes right {
-  100% {
-    transform: translateX(11px);
-  }
-}
-.dot.t {
-  background: transparent;
-}
-.dot .l {
-  margin-left: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-@-webkit-keyframes rightDown {
-  50% {
-    top: 4px;
-    left: 11px;
-  }
-  100% {
-    top: 12px;
-    left: 24px;
-  }
-}
-@keyframes rightDown {
-  50% {
-    top: 4px;
-    left: 11px;
-  }
-  100% {
-    top: 12px;
-    left: 24px;
-  }
-}
-@-webkit-keyframes drop {
-  100% {
-    transform: translate(70px, calc(35px + (100vh/2)));
-  }
-}
-@keyframes drop {
-  100% {
-    transform: translate(70px, calc(35px + (100vh/2)));
-  }
-}
-    </style>
+  <meta charset="UTF-8">
+  <title>TJMC-Launcher</title>
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' unsafe-inline">
+  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./dots.css">
 </head>
 
 <body>
-    <div id="app-mount">
-        <div class="container-c23">
-            <img src="./3c3new_logo_2.png" alt="" class="logo-spl">
-            <div class="loading-654">Загрузка<div class="dots">
-                    <span class="dot z"></span>
-                    <span class="dot f"></span>
-                    <span class="dot s"></span>
-                    <span class="dot t">
-                        <span class="dot l"></span>
-                    </span>
-                </div>
-            </div>
+  <div id="app-mount">
+    <div class="container-c23">
+      <img src="./3c3new_logo_2.png" alt="" class="logo-spl">
+      <div class="loading-container">
+        <div class="status-container" data-type="preload">
+          <span id="loading-text">Loading</span>
+          <div class="dots">
+            <span class="dot z"></span>
+            <span class="dot f"></span>
+            <span class="dot s"></span>
+            <span class="dot t">
+              <span class="dot l"></span>
+            </span>
+          </div>
         </div>
+        <div class="status-container" data-type="status">
+          <span id="loading-text">Loading</span>
+        </div>
+        
+      </div>
     </div>
-    <script type="text/javascript" src="./index.js" defer></script>
+  </div>
+  <script type="text/javascript" src="./index.js" defer></script>
 </body>
 
 </html>
