[upd] update preloader

--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="preload dark-theme">
+<html>
 
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
   <div id="app-mount">
     <div class="container-c23">
-      <img src="./3c3new_logo_2.png" alt="" class="logo-spl">
+      <img src="logo_new.png" alt="" class="logo-spl">
       <div class="loading-container">
         <div class="status-container" data-type="preload">
           <span id="loading-text">Loading</span>
@@ -28,7 +28,6 @@
         <div class="status-container" data-type="status">
           <span id="loading-text">Loading</span>
         </div>
-        
       </div>
     </div>
   </div>
