[upd] added basic progress update load bar

--- a/app/loading/index.html
+++ b/app/loading/index.html
@@ -28,6 +28,9 @@
         <div class="status-container" data-type="status">
           <span id="loading-text">Loading</span>
         </div>
+        <div class="status-container" data-type="progress">
+          <progress max="100" value="70"></progress>
+        </div>
       </div>
     </div>
   </div>
